⚙️ :: (#448) list add bug